# open-bess-edge

./: .cpanel.yml  .env.example  .gitignore  BESSAI_PRESENTACION.md  BESSAI_Suite_Comercial.spec  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  PROJECT_STATUS.md  README.md  SECURITY.md  SETUP_GITHUB.md  SUPPORT_PLAYBOOK.md  arbitraje-visualizer.html  bessai_premium.html  bessai_premium.tex  bessai_presentacion_fusion.html  bessai_presentation.tex  brute_force_modbus.py  check_ci.py  demo_server.py  docker-compose.production.yml  docker-compose.yml  launch_api.ps1  locust_results_failures.csv  locust_results_stats.csv  locust_results_stats_history.csv  mkdocs.yml  prometheus.yml  pyproject.toml  pyrightconfig.json  pytest.ini  pytest_full.txt  requirements-dev.txt  requirements.txt  (+7 more)
.agent/workflows/: iteracion-bessai.md
.clusterfuzzlite/: build.sh
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: adopter_introduction.yml  bep_discussion.yml  early_adopter_intro.yml
.github/ISSUE_TEMPLATE/: adopter_support.yml  bug_report.yml  feature_request.yml  hardware_profile.yml  hardware_support.yml
.github/workflows/: auto-retrain.yml  benchmark.yml  bessai-evolve.yml  changelog-bot.yml  ci.yml  codeql.yml  compliance-report.yml  create_good_first_issues.yml  data-pipeline.yml  deploy-website.yml  deps-audit.yml  docker-multiarch.yml  docs.yml  fuzzing.yml  hardware-ci.yml  interop-test.yml  model-drift.yml  mutation-test.yml  performance-regression.yml  pilot-validation.yml  pypi.yml  release.yml  scorecard.yml  security-full.yml  stale-bot.yml  weekly-update.yml
ai/: audit.py  audit_results.json
benchmarks/: baseline.json
config/: .env.example
dashboard/: index.html  main.js  optimizer.js  styles.css
dashboard/data/: cmg_maitencillo.json
data/: scraper_manifest.json  sec_normativa_raw.json
docs/: ADOPTER_HUB.md  API.md  BENCHMARK_RESULTS.md  BESSAI_EVOLVE.md  CONTRIBUTING_ADOPTERS.md  FAQ.md  GLOBAL_STANDARD_ROADMAP.md  GOOD_FIRST_ISSUES.md  MANUAL_ACCIONES_RODRIGO.md  MODULOS_Y_DATOS_SIMULADOS.md  ONBOARDING_7DAYS.md  OPERATIONS_GUIDE.md  PENDIENTES.md  PILOT_GUIDE.md  PLAN_INMORTALIDAD.md  ROADMAP.md  SETUP_GCP.md  TECHNICAL_RECOMMENDATIONS.md  academic_collaboration.md  adopters.md  ai_audit_report.md  ai_roadmap_20_10.md  api_reference.md  architecture.md  bessai_v2_roadmap.md  bounty_program.md  early_adopters.md  index.md  lf_energy_proposal.md  local_development.md  mqtt_integration.md  openssf_gold_checklist.md  partnership_program.md  pitch_deck.md  quickstart_rpi.md  release_process.md  research_topics.md  runbook.md  security_guide_maintainer.md  simulation_registry.md  (+1 more)
docs/adr/: 0001-pydantic-settings-config.md  0002-struct-modbus-encoding.md  0003-isolation-forest-anomaly-detection.md  0004-onnx-offline-inference.md  0005-gcp-pubsub-telemetry.md  0007-json-schema-telemetry-specification.md  0008-bep-process-for-specification-changes.md  README.md
docs/architecture/: network_diagram.md  system_security_plan.md
docs/benchmarks/: BENCHMARK-001-latency.md  BENCHMARK-002-scale.md  BENCHMARK-003-security.md  BENCHMARK-004-drl-arbitrage.md  BENCHMARK-005-edge-devices.md
docs/bep/: BEP-0001.md  BEP-0100.md  BEP-0200.md  BEP-0202.md  BEP-0300.md  BEP-0301.md  BEP-0302.md  BEP-0303.md  BEP-0400.md  BEP-0401.md  BEP-0402.md  BEP-0403.md  BEP-0404.md  BEP-0405.md  BEP-0406.md  BEP-0407.md  BEP-0500.md  BEP-0600.md
docs/certification/: UL9540_certification_roadmap.md
docs/compliance/: OCPP_compatibility.md  (+10 more)
examples/: mexico_profile_demo.py
landing/: index.html  package-lock.json  package.json
models/: Cardones_drl_cen_v1.onnx.data  Charrua_drl_cen_v1.onnx.data  Crucero_drl_cen_v1.onnx.data  Hualpen_drl_cen_v1.onnx.data  Lo_Aguirre_drl_cen_v1.onnx.data  Maitencillo_drl_cen_v1.onnx.data  Polpaico_drl_cen_v1.onnx.data  Quillota_drl_cen_v1.onnx.data  dispatch_policy.onnx  drl_maitencillo_v2_weather.onnx.data
registry/: TEMPLATE_interop_certification.json  byd_battery_box.json  fronius_gen24_byd.json  huawei_sun2000.json  simulator.json  sma_sunny_tripower.json  solaredge_storedge.json  tesla_powerwall3.json  victron_multiplus2.json
reportes/: factibilidad_maitencillo.md
reports/: bep0200_phase3_results.json
scripts/: analyze_locust.py  bessai_data_scraper.py  bessai_feasibility.py  bessai_lta_engine.py  bessai_ui_desktop.py  bessai_ui_web.py  bessai_xai.py  consolidate.py  export_cmg_json.py  fetch_cmg_evolution.py  fetch_nodes.py  generate_dummy_onnx.py  install_hooks.sh  pilot_setup.py  regen_hashes.sh  run_benchmarks.py  setup.sh  train_cen_standalone.py  train_drl.py  train_drl_agent.py  train_drl_cen.py  train_drl_policy.py
sec-bess-ingestor/: .env.example  README.md  cli.py  config.py  publish_now.ps1  pyproject.toml  requirements.txt  sec_gap_analysis.yml
src/: __init__.py
tests/: conftest.py  test_advanced_scenarios.py  test_ai_ids.py  test_alert_dispatcher.py  test_alert_manager.py  test_alert_manager_extended.py  test_ancillary_services.py  test_arbitrage_engine.py  test_bess_env.py  test_bess_rl_env_cen.py  test_bessai_commercial.py  test_bessai_evolve_v2.py  test_bessai_server_live.py  test_cen_publisher.py  test_cen_sc_bidder.py  test_cmg_predictor.py  test_cmg_predictor_extended.py  test_compliance_api.py  test_compliance_integration.py  test_config.py  test_dashboard_api.py  test_dashboard_api_handlers.py  test_datalake_publisher.py  test_degradation_model.py  test_drl_agent.py  test_fl_client.py  test_fl_coordinator.py  test_fl_server.py  test_fleet_coordinator.py  test_fleet_coordinator_extended.py  test_fleet_orchestrator.py  test_frequency_response.py  test_gap_medium.py  test_health.py  test_health_server.py  test_hvdc_scheduler.py  test_iec104_driver.py  test_integration_metrics_api.py  test_integration_modbus.py  test_lca_engine.py  (+26 more)
ui/: package-lock.json  package.json
website/: CHANGELOG.md  app.js  build.ps1  index.html  main.js  style.css
(+220 files in other folders)
