# pyproject.toml — BESSAI Edge Gateway
# PEP 517/518 compliant: package metadata + tool configuration

# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------
[build-system]
requires      = ["hatchling>=1.21"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Package metadata (PEP 621)
# ---------------------------------------------------------------------------
[project]
name            = "bessai-edge"
version         = "1.4.0"
description     = "Open-source industrial BESS gateway with AI anomaly detection, NTSyCS and IEC 62443 compliance"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.10"
authors         = [{ name = "BESS Solutions", email = "contacto@bess-solutions.com" }]
keywords        = [
    "BESS", "battery-energy-storage", "Modbus", "IIoT",
    "anomaly-detection", "edge-AI", "ONNX", "industrial-control",
    "NTSyCS", "IEC62443", "GCP",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic-settings>=2.2",
    "pymodbus>=3.6",
    "scikit-learn>=1.4",
    "onnxruntime>=1.17",
    "google-cloud-pubsub>=2.20",
    "opentelemetry-sdk>=1.23",
    "opentelemetry-exporter-otlp>=1.23",
    "prometheus-client>=0.20",
    "structlog>=24.1",
    "aiohttp>=3.9",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0", "pytest-asyncio>=0.23", "pytest-cov>=4.1",
    "ruff>=0.3", "mypy>=1.9", "bandit>=1.7", "pip-audit>=2.7",
]
docs = [
    "mkdocs-material>=9.5", "mkdocs-minify-plugin>=0.8",
]

[project.scripts]
bessai-edge = "bessai_edge.cli:main"

[project.urls]
Homepage      = "https://bess-solutions.github.io/open-bess-edge/"
Repository    = "https://github.com/bess-solutions/open-bess-edge"
Documentation = "https://bess-solutions.github.io/open-bess-edge/"
"Bug Tracker" = "https://github.com/bess-solutions/open-bess-edge/issues"
Changelog     = "https://github.com/bess-solutions/open-bess-edge/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths       = ["tests"]
asyncio_mode    = "auto"
log_cli         = true
log_cli_level   = "WARNING"
addopts         = "-v --tb=short"

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (reemplaza flake8 + black + isort)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length    = 99
target-version = "py310"
src            = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "C90",      # mccabe complexity
]
ignore = [
    "E501",     # line-length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG"]   # allow assert + unused args in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — strict-ish type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.10"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true
no_error_summary       = true
exclude                = ["^tests/integration/"]

[[tool.mypy.overrides]]
module = ["pymodbus.*", "gcloud.*", "opentelemetry.*", "prometheus_client.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source   = ["src"]
omit     = [
    "src/**/__init__.py",
    # Infrastructure modules requiring GCP credentials / OTel collector
    "src/interfaces/otel_setup.py",
    "src/interfaces/pubsub_publisher.py",
    "src/core/main.py",
    # Partial stubs (production path only — tested via integration)
    "src/interfaces/sun2000_monitor.py",
]

[tool.coverage.report]
fail_under  = 80
show_missing = true

# ---------------------------------------------------------------------------
# Bandit — Python SAST (Security Static Analysis)
# ---------------------------------------------------------------------------
[tool.bandit]
skips = [
    "B101",   # assert_used — acceptable in tests (excluded via exclude)
    "B311",   # random — we use random only for simulation, not crypto
    "B603",   # subprocess_without_shell_equals_true — not applicable
    "B404",   # import_subprocess — used only in scripts/
]
exclude_dirs = ["tests", ".venv", ".git"]
